<resources>
    <string name="app_name">Astro</string>

    <string name="action_refresh_name">Refresh</string>
    <string name="action_settings_name">Settings</string>
    <string name="action_time">Time: %s</string>

<!--    Settings-->
    <string name="settings_latitude">Latitude</string>
    <string name="settings_longitude">Longitude</string>
    <string name="settings_latitude_hint">(-90, 90)</string>
    <string name="settings_longitude_hint">(-180, 180)</string>
    <string name="settings_refreshRate">Refresh Rate (min)</string>
    <string name="settings_confirm_button">Save</string>

<!--    Sun-->
    <string name="sun">Sun</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="sunriseAzimuth">Sunrise Azimuth: %s</string>
    <string name="sunsetAzimuth">Sunset Azimuth: %s</string>
    <string name="civilDawn">Civil Dawn: %s</string>
    <string name="civilDusk">Civil Dusk: %s</string>

<!--    Moon-->
    <string name="moon">Moon</string>
    <string name="moonrise">Moonrise: %s</string>
    <string name="moonset">Moonset: %s</string>
    <string name="fullMoon">Full Moon: %s</string>
    <string name="newMoon">New Moon: %s</string>
    <string name="moonPhase">Moon Phase: %s%%</string>
    <string name="dayOfSynodicMonth">Day of synodic month: %s</string>

</resources>
