<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_latitude"
                android:layout_weight="1"
                android:ems="10"
                 />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_longitude"
                android:layout_weight="1"
                android:ems="10"
                 />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/settings_edt_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/settings_latitude_hint"
                android:importantForAutofill="no"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned" />

        <EditText
                android:id="@+id/settings_edt_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/settings_longitude_hint"
                android:importantForAutofill="no"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/settings_btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/settings_confirm_button"
                 />

        <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_refreshRate"/>

            <Spinner
                    android:id="@+id/settings_spn_refreshRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>